Prep for Update

--- a/DataFiles/Changelog.txt
+++ b/DataFiles/Changelog.txt
@@ -8,6 +8,7 @@ Added a button to Rest Enhancement Trees from Current level
 Added feature to rest Skill point by Right clicking on Skill name or Character level.
 Added save file feedback
 Added Default Filename to new savefile or saveas dialogbox.
+Added a TR button to save none changing parts of a character design.
 
 Version 4.35.301
 ================
